--- a/application/views/scripts/calendrier-des-commissions/generationpv.phtml
+++ b/application/views/scripts/calendrier-des-commissions/generationpv.phtml
@@ -1,5 +1,7 @@
 <?php
 
+use App\services\Utils;
+
 function addChamp($odf,$nomOdf, $variable){
     try{
         $odf->setVars($nomOdf,$variable, true,'UTF8');
@@ -170,7 +172,7 @@ foreach($this->membresFiles as $val => $membre){
                         }
 
                         // Gestion des formulaires personnalisés
-                        $serviceUtils = new Service_Utils();
+                        $serviceUtils = new Utils();
 
 						//Ajout du model permettant de recuperer les champ fils d un parent
 						$modelChamp = new Model_DbTable_Champ();
