--- a/application/views/scripts/dossier/creationdoc.phtml
+++ b/application/views/scripts/dossier/creationdoc.phtml
@@ -1,5 +1,7 @@
 <?php
 
+use App\services\Utils;
+
 if (!function_exists('addChamp')) {
     function addChamp($odf,$nomOdf, $variable) {
         try{
@@ -813,7 +815,7 @@ try {
 } catch (OdfException $e) {}
 
 // Gestion des formulaires personnalisés
-$serviceUtils = new Service_Utils();
+$serviceUtils = new Utils();
 
 foreach ($this->formulaires as $formulaire) {
     // Permet d'avoir les informations unitairement
