--- a/application/views/scripts/calendrier-des-commissions/generationconvoc.phtml
+++ b/application/views/scripts/calendrier-des-commissions/generationconvoc.phtml
@@ -1,7 +1,5 @@
 <?php
 
-use App\services\Utils;
-
 $consonne = array("a", "e", "i", "o", "u", "y", "A", "E", "I", "O", "U", "Y");
 
 if(count($this->membresFiles) == 0){
@@ -344,7 +342,7 @@ function retrieveInfoDossier($segment, $dossierInfos) {
     }
 
     // Gestion des formulaires personnalisés
-    $serviceUtils = new Utils();
+    $serviceUtils = new Service_Utils();
 
     foreach ($dossierInfos['FORMULAIRES'] as $formulaire) {
         if (is_array($formulaire['RUBRIQUES'])) {
