Les iframes n'étaient pas cachées

--- a/application/views/scripts/gestion-des-documents/index.phtml
+++ b/application/views/scripts/gestion-des-documents/index.phtml
@@ -108,7 +108,7 @@
 
 $(document).ready(function() {
 
-    $("body").append("<iframe name='hiddeniframe' id='hiddeniframe' src='about:blank' style='width:0px; height:0px' >");
+    $("body").append("<iframe name='hiddeniframe' id='hiddeniframe' src='about:blank' style='width:0px; height:0px' hidden>");
 
     // Ajout d'un type
     $("#button-aud").click(function() {
