--- a/application/views/scripts/piece-jointe/index.phtml
+++ b/application/views/scripts/piece-jointe/index.phtml
@@ -41,7 +41,7 @@
     Dropzone.autoDiscover = false;
 
     $(document).ready(function() {
-        $("body").append("<iframe name='hiddeniframe' id='hiddeniframe' src='about:blank' style='width:0px; height:0px' >");
+        $("body").append("<iframe name='hiddeniframe' id='hiddeniframe' src='about:blank' style='width:0px; height:0px' hidden>");
 
 		// Bouton de la pièce jointe
 		$("#addPJ").button({
