--- a/application/views/scripts/retablir/partials/partial-deleted-etablissements.phtml
+++ b/application/views/scripts/retablir/partials/partial-deleted-etablissements.phtml
@@ -3,36 +3,53 @@
 </div>
 
 <?php if (count($this->data) > 0): ?>
-    <table class="table table-hover table-bordered">
+    <table class="table table-hover">
         <thead>
             <tr>
                 <th class="whitespace-nowrap">Supprimé par</th>
                 <th>Nom de l'établissement</th>
-                <th class="whitespace-nowrap"></th>
             </tr>
         </thead>
         <tbody>
             <?php foreach($this->data as $deletedElement) : ?>
                 <tr>
                     <td class="whitespace-nowrap">
-                        <p><?= $deletedElement['USERNAME_UTILISATEUR'] ?></p>
+                        <div class="deleted-element__deleted-by">
+                            <div class="deleted-element__deleted-by_informations">
+                                <?php if (null !== $deletedElement['DELETED_BY']): ?>
+                                    <?= $deletedElement['USERNAME_UTILISATEUR'] ?>
+                                    <?php $this->avatar($deletedElement['DELETED_BY'], 'small', ['style' => 'border-radius: 50%;']) ?>
+                                <?php else: ?>
+                                    Inconnu
+                                    <?php $this->avatar('default', 'small', ['style' => 'border-radius: 50%;']) ?>
+                                <?php endif ?>
+                            </div>
+
+                            <small class='muted'>
+                                <?php
+                                    $dateSuppression = new Zend_Date($deletedElement['DATESUPPRESSION_ETABLISSEMENT'], 'yyyy-MM-dd');
+                                    $dateSuppression = $dateSuppression
+                                        ->get(Zend_Date::WEEKDAY.' '.Zend_Date::DAY_SHORT.' '.Zend_Date::MONTH_NAME_SHORT.' '.Zend_Date::YEAR, 'fr');;
+                                ?>
+                                Le <?= $dateSuppression ?>
+                            </small>
+                        </div>
                     </td>
 
-                    <td class='linkDisabled'>
-                        <?= $deletedElement['LIBELLE_ETABLISSEMENTINFORMATIONS'] ?>
-                        <?php if ('' !== $deletedElement['LIBELLE_COMMUNE']): ?>
-                            - <?= $deletedElement['LIBELLE_COMMUNE'] ?>
-                        <?php endif ?>
-                    </td>
-
-                    <td class="whitespace-nowrap">
-                        <a
-                            class='btn-small'
-                            href=<?= '/etablissement/retablir-etablissement/idEtablissement/'.$deletedElement['ID_ETABLISSEMENT'] ?>
-                        >
-                            <em class="icon-ok icon-black"></em>
-                            Rétablir l'établissement
-                        </a>
+                    <td>
+                        <div class="deleted-element__name">
+                            <?= $deletedElement['LIBELLE_ETABLISSEMENTINFORMATIONS'] ?>
+                            <?php if ('' !== $deletedElement['LIBELLE_COMMUNE']): ?>
+                                - <?= $deletedElement['LIBELLE_COMMUNE'] ?>
+                            <?php endif ?>
+                            <a
+                                class='btn btn-small deleted-element__restore-button'
+                                href=<?= '/etablissement/retablir-etablissement/idEtablissement/'.$deletedElement['ID_ETABLISSEMENT'] ?>
+                            >
+                                <i class="icon-ok icon-black"></i>
+                                Rétablir l'établissement
+                            </a>
+                        </div>
                     </td>
                 </tr>
             <?php endforeach ?>
