Affiche les informations d'envoi uniquement pour dossiers Plat'AU

--- a/application/layouts/dossier.phtml
+++ b/application/layouts/dossier.phtml
@@ -231,7 +231,7 @@ endif ?>
         <small><br/><?= nl2br($this->objetDossier) ?></small>
 
 	    <?php if (null !== $this->id_platau): ?>
-            <p style='font-size: medium;' class='label label-info'>
+            <p style='font-size: medium;' class='dossier__identifiant-platau label label-info'>
                 <strong>CONSULTATION PLATAU : <?= $this->id_platau ?></strong>
             </p>
         <?php endif ?>
