Sémantique pour les icônes

--- a/application/layouts/index.phtml
+++ b/application/layouts/index.phtml
@@ -21,7 +21,7 @@
                         <a class="deconnexion" href="<?php echo $this->url(array('controller' => 'session', 'action' => 'logout'), null, true) ?>">Déconnexion</a>
                     </span>
                     <a id="reinitBlocOrder" class="btn btn-small pull-right" href="#">
-                        <em class="icon-th"></em> Ré-initialiser les blocs
+                        <i class="icon-th"></i> Ré-initialiser les blocs
                     </a>
                 </div>
             </div>
