--- a/application/views/scripts/dossier/results/dossierEtab.phtml
+++ b/application/views/scripts/dossier/results/dossierEtab.phtml
@@ -9,7 +9,7 @@
         ?>
         <span class="doss-nom">
             <?php if ($this->VERROU_DOSSIER == 1): ?>
-                <em class="icon-lock"></em>
+                <i class="icon-lock"></i>
             <?php endif;
 
             if (!empty($this->OBJET_DOSSIER)):
