--- a/application/layouts/listing.phtml
+++ b/application/layouts/listing.phtml
@@ -1,7 +1,7 @@
 <?php $this->placeholder('lateral_navigation')->captureStart(); // Capture du 'lateral_navigation' ?>
     <ul class="nav nav-tabs nav-stacked menu_dashboard" >
-        <li><a href='../etablissement/add'><em class="icon-plus"></em> Ajouter un établissement</a></li>
-        <li><a href='../dossier/add'><em class="icon-plus"></em> Ajouter un dossier</a></li>
+        <li><a href='../etablissement/add'><i class="icon-plus"></i> Ajouter un établissement</a></li>
+        <li><a href='../dossier/add'><i class="icon-plus"></i> Ajouter un dossier</a></li>
     </ul>
 <?php $this->placeholder('lateral_navigation')->captureEnd(); ?>
 
