--- a/application/views/scripts/calendrier-des-commissions/gestionodj.phtml
+++ b/application/views/scripts/calendrier-des-commissions/gestionodj.phtml
@@ -2,29 +2,29 @@
 <input type='hidden' name='idCommission' id='idCommission' value='<?php if($this->idComm){ echo $this->idComm; } ?>'/>
 <ul class="nav nav-tabs nav-stacked menu_dashboard" >
     <li>
-        <a href="#" id='commissionPj'><em class="icon-share icon-black"></em> Pièces jointes</a>
+        <a href="#" id='commissionPj'><i class="icon-share icon-black"></i> Pièces jointes</a>
     </li>
     <li class="nav-header">Actions</li>
     <li>
         <a id='exportCom' href='/calendrier-des-commissions/exportoutlook/dateCommId/<?php echo $this->infosDateComm['ID_DATECOMMISSION']; ?>' ><em class='icon-calendar'></em> Exporter pour Outlook</a>
     </li>
     <li>
-        <a href="#" id='createConvoc'><em class="icon-file"></em> Générer Convocations</a>
+        <a href="#" id='createConvoc'><i class="icon-file"></i> Générer Convocations</a>
     </li>
     <li>
-        <a href="#" id='createOdj'><em class="icon-list-alt"></em> Générer l'ordre du jour</a>
+        <a href="#" id='createOdj'><i class="icon-list-alt"></i> Générer l'ordre du jour</a>
     </li>
     <li>
-        <a href="#" id='createPv'><em class="icon-file"></em> Générer PV</a>
+        <a href="#" id='createPv'><i class="icon-file"></i> Générer PV</a>
     </li>
     <li>
-        <a href="#" id='creationCompteRendu'><em class="icon-book"></em> Générer le compte rendu</a>
+        <a href="#" id='creationCompteRendu'><i class="icon-book"></i> Générer le compte rendu</a>
     </li>
     <li>
         <?php if($this->infosDateComm['GESTION_HEURES'] == 1): ?>
-            <a href="#" class="heures" id='non' onclick="return confirm('Confirmez vous de ne pas prendre en compte les heures ?');"><em class="icon-time"></em> Ne pas prendre en compte les heures</a>
+            <a href="#" class="heures" id='non' onclick="return confirm('Confirmez vous de ne pas prendre en compte les heures ?');"><i class="icon-time"></i> Ne pas prendre en compte les heures</a>
         <?php else : ?>
-            <a href="#" class="heures" id='oui' onclick="return confirm('Confirmez vous de prendre en compte les heures ?');"><em class="icon-time"></em> Prendre en compte les heures</a>
+            <a href="#" class="heures" id='oui' onclick="return confirm('Confirmez vous de prendre en compte les heures ?');"><i class="icon-time"></i> Prendre en compte les heures</a>
         <?php endif ?>
     </li>
 </ul>
