--- a/application/views/scripts/calendrier-des-commissions/index.phtml
+++ b/application/views/scripts/calendrier-des-commissions/index.phtml
@@ -4,19 +4,19 @@
     <?php if (getenv('PREVARISC_SECURITY_KEY') && getenv('PREVARISC_SECURITY_KEY') !== '') : ?>
         <li>
             <a id='syncCom'  href='<?php echo $this->url_webcal ?>' style="display:none">
-                <em class="icon-repeat"></em> Synchroniser le calendrier de cette commission
+                <i class="icon-repeat"></i> Synchroniser le calendrier de cette commission
             </a>
         </li>
     <?php endif ?>
     <li>
         <a id='exportCom'  href='#' style="display:none">
-            <em class="icon-calendar"></em> Exporter pour Outlook
+            <i class="icon-calendar"></i> Exporter pour Outlook
         </a>
     </li>
     <?php if ($this->is_view_all) : ?>
         <li>
             <a id='viewAllLink'  href='#'>
-                <em class="icon-eye-open"></em> Voir tous les évènements
+                <i class="icon-eye-open"></i> Voir tous les évènements
             </a>
         </li>
     <?php endif ?>
@@ -24,7 +24,7 @@
         <?php if (getenv('PREVARISC_SECURITY_KEY') && getenv('PREVARISC_SECURITY_KEY') !== '') : ?>
             <li>
                 <a id='syncCal'  href='<?php echo $this->url_webcal ?>'>
-                    <em class="icon-repeat"></em> Synchroniser le calendrier de toutes les commissions
+                    <i class="icon-repeat"></i> Synchroniser le calendrier de toutes les commissions
                 </a>
             </li>
         <?php endif ?>
