--- a/application/views/scripts/dossier/results/avisderogation/dossier.phtml
+++ b/application/views/scripts/dossier/results/avisderogation/dossier.phtml
@@ -1,5 +1,5 @@
 <?php foreach ($this->DOSSIERS_ETAB as $dossier): ?>
-    <div class="radio-controls">
+    <div class="radio-controls avis-derogation__leve">
         <label class="radio" for="ID_DOSSIER_<?= $dossier['ID_DOSSIER'] ?>">
             <input
                 type="radio"
@@ -9,7 +9,7 @@
                 <?= $dossier['ID_DOSSIER'] === $this->ID_DOSSIER_LIE ? 'checked' : '' ?>
             >
             <a href="<?= $this->url(['controller' => 'dossier', 'action' => 'index', 'id' => $dossier['ID_DOSSIER']]) ?>">
-                <?= $dossier['ID_DOSSIER'].'-'.$dossier['OBJET_DOSSIER'] ?>
+                <?= $dossier['OBJET_DOSSIER'] ?? $dossier['ID_DOSSIER'] ?>
             </a>
         </label>
     </div>
