Les valeurs alternent entre sans et avec local à sommeil pour chaque catégorie

--- a/application/views/scripts/tableau-des-periodicites/index.phtml
+++ b/application/views/scripts/tableau-des-periodicites/index.phtml
@@ -39,14 +39,14 @@
 
 					<td style='text-align: center' >
 						<?php if(!in_array($type["ID_TYPE"], $localsommeil_types)) : ?>
-							<input type='text' size='3' maxlength='3' value='<?php echo ( isset($periodicite[0]) ) ? $periodicite[0] : 0 ?>' name='<?php echo $categorie["ID_CATEGORIE"]."_".$type["ID_TYPE"]."_0" ?>' />
+							<input type='text' size='3' maxlength='3' value='<?= $periodicite[0] ?: 0 ?>' name='<?php echo $categorie["ID_CATEGORIE"]."_".$type["ID_TYPE"]."_0" ?>' />
 						<?php else : ?>
 							<input type='text' size='3' style='visibility: hidden' />
 						<?php endif ?>
 					</td>
 
 					<td style='text-align: center' >
-							<input type='text' size='3' maxlength='3' value='<?php echo ( isset($periodicite[1]) ) ? $periodicite[1] : 0 ?>' name='<?php echo $categorie["ID_CATEGORIE"]."_".$type["ID_TYPE"]."_1" ?>' />
+                        <input type='text' size='3' maxlength='3' value='<?= $periodicite[1] ?: 0 ?>' name='<?php echo $categorie["ID_CATEGORIE"]."_".$type["ID_TYPE"]."_1" ?>' />
 					</td>
 
 				<?php endforeach ?>
@@ -72,7 +72,7 @@
 					<?php $periodicite = $this->tableau[0][$classe["ID_CLASSE"]]; ?>
 
 					<td style='text-align: center' >
-						<input type='text' size='3' maxlength='3' value='<?php echo ( isset($periodicite[0]) ) ? $periodicite[0] : 0 ?>' name='<?php echo "0_".$classe["ID_CLASSE"]."_0" ?>' />
+						<input type='text' size='3' maxlength='3' value='<?= $periodicite[0] ?: 0 ?>' name='<?php echo "0_".$classe["ID_CLASSE"]."_0" ?>' />
 					</td>
 
 				<?php endforeach ?>
