Correction d'affiche sur grand écran

--- a/application/views/scripts/dossier/results/avis-et-derogations.phtml
+++ b/application/views/scripts/dossier/results/avis-et-derogations.phtml
@@ -17,7 +17,7 @@
                     endif ?>
                 </a>
             </p>
-            <div class="flex">
+            <div class="avis-derogation__affichage-historique">
                 <label for="affHistorique">Afficher dans l'onglet de l'établissement</label>
                 <input
                     type="checkbox"
