--- a/application/views/scripts/etablissement/partials/partial-adresse.phtml
+++ b/application/views/scripts/etablissement/partials/partial-adresse.phtml
@@ -13,7 +13,7 @@
     </td>
     <td>
         <small>
-            <a class="modifierAdresse" data-id=<?= $this->adresse['ID_ADRESSE'] ?> data-toggle="modal" data-backdrop="static" href="#adresse-modal-edit">Modifier</a>
+            <a class="modifierAdresse" data-id="<?= $this->adresse['ID_ADRESSE'] ?>" data-toggle="modal" data-backdrop="static" href="#adresse-modal-edit">Modifier</a>
         </small>
     </td>
     <td>
