--- a/public/css/formulaire/descriptif.css
+++ b/public/css/formulaire/descriptif.css
@@ -8,7 +8,12 @@
     margin-bottom: 25px;
 }
 
+.form-horizontal .control-group .controls {
+    overflow-x: auto;
+}
+
 .addRow {
     display: block;
     margin: auto;
+    margin-bottom: 5px;
 }
