--- a/application/views/scripts/dossier/creationdoc.phtml
+++ b/application/views/scripts/dossier/creationdoc.phtml
@@ -356,8 +356,12 @@ if (!function_exists('addPrescriptionCC')) {
 if ($this->id_typeactivite == 29) {
     try{
         $cellulesPresc = $odf->setSegment('cellulesPresc');
+    } catch (OdfException $e) {
+        echo "<span class='label label-warning'>Le document que vous avez sélectionné pour la génération ne correspond pas à un centre commercial</span><br/><br/>";
+    }
 
-        if (isset($this->celluleDossier) && isset($cellulesPresc)) {
+    if (isset($cellulesPresc)) {
+        if (isset($this->celluleDossier)) {
             foreach($this->celluleDossier as $cellulesInfos => $cellule) {
                 addChamp($cellulesPresc, 'libelleCellule', $cellule['LIBELLE_ETABLISSEMENTINFORMATIONS']);
 
@@ -373,7 +377,7 @@ if ($this->id_typeactivite == 29) {
 
                 $cellulesPresc->merge();
             }
-        } else if (isset($this->celluleDossierLevee) && isset($cellulesPresc)) {
+        } else if (isset($this->celluleDossierLevee)) {
             foreach($this->celluleDossierLevee as $celluleKey => $cellule) {
                 addChamp($cellulesPresc, 'libelleCellule', $cellule['LIBELLE_ETABLISSEMENTINFORMATIONS']);
 
@@ -387,19 +391,14 @@ if ($this->id_typeactivite == 29) {
             }
         }
 
-        addPrescription($this->prescriptionReglDossier,0,$odf);
-        addPrescription($this->prescriptionExploitation,1,$odf);
-        addPrescription($this->prescriptionAmelioration,2,$odf);
-
         $odf->mergeSegment($cellulesPresc);
-    } catch (OdfException $e) {
-        echo "<span class='label label-warning'>Le document que vous avez sélectionné pour la génération ne correspond pas à un centre commercial</span><br/><br/>";
     }
-} else {
-    addPrescription($this->prescriptionReglDossier,0,$odf);
-    addPrescription($this->prescriptionExploitation,1,$odf);
-    addPrescription($this->prescriptionAmelioration,2,$odf);
 }
+
+// On ajoute toujours les prescriptions du dossier concerné
+addPrescription($this->prescriptionReglDossier,0,$odf);
+addPrescription($this->prescriptionExploitation,1,$odf);
+addPrescription($this->prescriptionAmelioration,2,$odf);
 
 //PARTIE TEXTE APPLICABLE
 try{
