[#4887] Correction sur la modification d'une adresse

--- a/application/views/scripts/etablissement/edit.phtml
+++ b/application/views/scripts/etablissement/edit.phtml
@@ -1066,6 +1066,7 @@
             // Ville
             $("input[name='commune_ac']").val(data.LIBELLE_COMMUNE)
             // Voie
+            $("input[name='voie']").val(data.ID_RUE)
             $("input[name='voie_ac']").removeAttr('disabled')
             $("input[name='voie_ac']").val(data.LIBELLE_RUE)
 
