--- a/application/views/scripts/formulaire/partials/partial-input-champ.phtml
+++ b/application/views/scripts/formulaire/partials/partial-input-champ.phtml
@@ -1,20 +1,31 @@
+<?php
+    $champStr = 'champ-'.htmlspecialchars($this->champ["ID_CHAMP"]);
+
+    if ($this->idxTableau) {
+        $champStr .= '-'.$this->idxTableau;
+    }
+    if ($this->idParent) {
+        $champStr .= '-'.$this->idParent;
+    }
+?>
+
 <?php switch ($this->champ['ID_TYPECHAMP']) {
     // Texte
     case 1: ?>
         <input
             type='text'
-            name='<?= isset($this->idxTableau) ? $this->champ['STR_DATA']  : 'champ-'.htmlspecialchars($this->champ["ID_CHAMP"]) ?>'
+            name='<?= isset($this->champ['STR_DATA']) ? $this->champ['STR_DATA']  : $champStr ?>'
             value='<?= htmlspecialchars($this->champ['VALEUR'], ENT_QUOTES) ?>'
             <?= $this->canWrite ? '' : 'disabled' ?>
         >
     <?php break;
     // Texte long
     case 2: ?>
-        <textarea name='<?= isset($this->idxTableau) ? $this->champ['STR_DATA'] : 'champ-'.htmlspecialchars($this->champ["ID_CHAMP"])?>' <?= $this->canWrite ? '' : 'disabled' ?>><?= htmlspecialchars($this->champ['VALEUR'], ENT_QUOTES) ?></textarea>
+        <textarea name='<?= isset($this->champ['STR_DATA']) ? $this->champ['STR_DATA'] : $champStr ?>' <?= $this->canWrite ? '' : 'disabled' ?>><?= htmlspecialchars($this->champ['VALEUR'], ENT_QUOTES) ?></textarea>
     <?php break;
     // Liste
     case 3: ?>
-        <select name='<?= isset($this->idxTableau) ? $this->champ['STR_DATA']: 'champ-'.htmlspecialchars($this->champ["ID_CHAMP"])?>' <?= $this->canWrite ? '' : 'disabled' ?>>
+        <select name='<?= isset($this->champ['STR_DATA']) ? $this->champ['STR_DATA']: $champStr ?>' <?= $this->canWrite ? '' : 'disabled' ?>>
             <option selected value>Sélectionnez un élément</option>
             <?php foreach($this->champsvaleurliste[$this->champ['ID_CHAMP']] as $champvaleurliste): ?>
                 <option
@@ -28,19 +39,19 @@
     <?php break;
     // Nombre
     case 4: ?>
-        <input type='number' name='<?= isset($this->idxTableau) ? $this->champ['STR_DATA']  : 'champ-'.htmlspecialchars($this->champ["ID_CHAMP"])?>' <?= $this->canWrite ? '' : 'disabled' ?> min='0' value='<?= $this->champ['VALEUR'] ?>'>
+        <input type='number' name='<?= isset($this->champ['STR_DATA']) ? $this->champ['STR_DATA']  : $champStr ?>' <?= $this->canWrite ? '' : 'disabled' ?> min='0' value='<?= $this->champ['VALEUR'] ?>'>
     <?php break;
     // Case à cocher
     case 5: ?>
         <input
             type="hidden"
-            name='<?= isset($this->idxTableau) ? $this->champ['STR_DATA']  : 'champ-'.htmlspecialchars($this->champ["ID_CHAMP"])?>'
+            name='<?= isset($this->champ['STR_DATA']) ? $this->champ['STR_DATA']  : $champStr ?>'
             value="0"
             <?= $this->canWrite ? '' : 'disabled' ?>
         >
         <input
             type="checkbox"
-            name='<?= isset($this->idxTableau) ? $this->champ['STR_DATA']  : 'champ-'.htmlspecialchars($this->champ["ID_CHAMP"])?>'
+            name='<?= isset($this->champ['STR_DATA']) ? $this->champ['STR_DATA']  : $champStr ?>'
             value="1"
             <?= $this->canWrite ? '' : 'disabled' ?>
             <?= $this->champ['VALEUR'] ? 'checked' : '' ?>
